Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -381,32 +381,32 @@ dm_b2 %>%
 
 
 #### Table. Sequence of behaviours per trial 
-| exp_id | behaviour_sequence                                                | sex | ageclass | context_experiment |
+| Trial id | Sequence of behaviours recorded                                   | Sex | Age class | Condition |
 |--------|-------------------------------------------------------------------|-----|----------|--------------------|
 | EXP11  | Bipedal_Flee down                                                 | f   | adult    | eagle              |
 | EXP4   | Bipedal_Tail raises_Tail raises_Bipedal                            | f   | adult    | eagle              |
 | EXP10  | Tail raises_Approach model_Tail raises_Move up_Tail raises_Move down | m   | adult    | eagle              |
-| EXP14  | Flee up_Tail raises_Yawn_Move down                                 | m   | subadult | eagle              |
 | EXP19  | Bipedal_Flee up                                                   | m   | adult    | eagle              |
 | EXP26  | Flee down_Tail raises_Yawn_Yawn                                    | m   | adult    | eagle              |
+| EXP14  | Flee up_Tail raises_Yawn_Move down                                 | m   | subadult | eagle              |
 | EXP6   | Flee up_Move down_Tail raises                                      | m   | subadult | eagle              |
 | EXP8   | Tail raises_Bipedal_Tail raises                                    | m   | subadult | eagle              |
 | EXP16  | Flee up                                                           | f   | adult    | leopard            |
 | EXP7   | Flee up                                                           | f   | adult    | leopard            |
 | EXP9   | Flee up                                                           | f   | adult    | leopard            |
-| EXP12  | Flee up_Tail raises_Move up                                        | m   | subadult | leopard            |
 | EXP13  | Flee up                                                           | m   | adult    | leopard            |
-| EXP17  | Flee up                                                           | m   | subadult | leopard            |
 | EXP20  | Flee up                                                           | m   | adult    | leopard            |
 | EXP25  | Flee up                                                           | m   | adult    | leopard            |
+| EXP12  | Flee up_Tail raises_Move up                                        | m   | subadult | leopard            |
+| EXP17  | Flee up                                                           | m   | subadult | leopard            |
 | EXP3   | Flee up                                                           | m   | subadult | leopard            |
 | EXP15  | Flee straight_Bipedal_Move up_Tail raises                          | f   | adult    | viper              |
 | EXP2   | Flee up_Move up                                                   | f   | adult    | viper              |
 | EXP24  | Flee straight_Approach model                                       | f   | adult    | viper              |
 | EXP5   | Flee straight_Bipedal_Move up                                      | f   | subadult | viper              |
+| EXP21  | Flee straight_Tail raises_Bipedal_Tail raises_Approach model       | m   | adult    | viper              |
 | EXP1   | Approach model                                                     | m   | subadult | viper              |
 | EXP18  | Flee up_Move down_Bipedal_Move up                                  | m   | subadult | viper              |
-| EXP21  | Flee straight_Tail raises_Bipedal_Tail raises_Approach model       | m   | adult    | viper              |
 | EXP22  | Flee up_Tail raises                                               | m   | subadult | viper              |
 | EXP23  | Flee straight_Tail raises                                          | m   | subadult | viper              |
 | EXP27  | Flee up_Move up                                                   | m   | subadult | viper              |
