Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -380,7 +380,7 @@ dm_b2 %>%
 | Viper     | 4 (4)              | 0 (0)        |
 
 
-#### Table. Sequence of behaviours per trial 
+#### Table. Sequence of behaviours per trial in the first 30s following model detection
 | Trial id | Sequence of behaviours recorded                                   | Sex | Age class | Condition |
 |--------|-------------------------------------------------------------------|-----|----------|--------------------|
 | EXP11  | Bipedal_Flee down                                                 | f   | adult    | eagle              |
