Update 2. Predator model experiments - vocal response.md

--- a/2. Predator model experiments - vocal response.md
+++ b/2. Predator model experiments - vocal response.md
@@ -1,6 +1,7 @@
 # Predator model experiment - vocal responses
 Here we analyse the vocal responses of sooty mangabeys when presented with realistic models of leopard, eagle and viper (Gaboon and Rhinoceros). 
-We coded and used for analysis all vocalisations occurring during the first 30s after model detection by the focal individual.
+We coded and used for analysis all vocalisations occurring during the first 30s after the start of the first vocalisation. 
+We ensured that vocalisations were provoked by the predator by excluding N = 2 trials were vocalisations started more than 1 min after model detection by the focal individual.
 
 ### Data
 Details on dataset processing.
@@ -9,17 +10,10 @@ Details on dataset processing.
   
 ```r
 # Dataset
-# select the datafile "mangabey call wide" #NEED TO UPLOAD THE FILE ONCE WITH ONLY RELEVANT COLUMNS
+# select the datafile "mangabey call wide2" 
 csvFile <- file.choose()
 
 dm_v  = read.csv(csvFile, header=T)
-
-# Compute the reference time when the predator was seen
-dm_v$time_predator_seen <- dm_v$time_cutoff - 30
-
-# Calibrate start and end times relative to predator exposure
-dm_v$start_time_calibrated <- dm_v$start_time_s_first - dm_v$time_predator_seen
-dm_v$end_time_calibrated <- dm_v$end_time_s_last - dm_v$time_predator_seen
 
 # Create variable call.name.unique2 transforming shrill_hoo_growl and shrill_hoo as 1 and shrill as 0
 dm_v$call.name.unique2 <- ifelse(dm_v$call.name.unique %in% c("shrill_hoo", "shrill_hoo_growl"), 1, 0)
@@ -32,20 +26,28 @@ total_utt <- dm_v %>%
 # Merge the total_utt back into the original dataset
 dm_v <- dm_v %>%
   left_join(total_utt, by = "exp_id")
+
+# Plot vocal utterance by context and time of production
+ggplot(dm_v, aes(x = begin_time_s_calibrated, y = as.factor(exp_id), color = as.factor(call.name.unique))) +
+  geom_point(size = 2) +  
+  scale_color_manual(values = c("darkred", "#08C", "darkgreen"), labels = c("shrill", "shrill_hoo", "shrill_hoo_growl")) +
+  labs(x = "Time (s)", y = "", color = "Utterance type") +
+  theme_minimal() +
+  facet_grid(context_experiment ~ ., scales = "free_y", space = "free_y")  # Stacks facets vertically
+
  ```
 </details>
 
 ### 1. Sample size
-#### Figure. Vocal utterances produced during the first 30s after model detection
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/vocal%20utterances%20sample%20size.jpeg?raw=true" alt="voc" width="600"/>
+#### Figure. Vocal utterance produced during the first 30s after the start of first vocalisation
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/all_utt.jpeg" alt="voc" width="600"/>
 
 ## 2. Analyse vocal utterance type vs predator type and time of vocal production
-We used the type of predator as random effect so we don't use one type of predator as baseline.
 
 ```r
 # Run model
-m_utt_time_fixed <- brm(
-  formula = call.name.unique2 ~ start_time_calibrated + (1 | context_experiment) + (1 | id),
+m_utt_type <- brm(
+  formula = call.name.unique2 ~ context_experiment + (1 | total_utt) + (1 | id),
   family = bernoulli(),
   data = dm_v,
   iter = 8000, 
@@ -60,49 +62,66 @@ m_utt_time_fixed <- brm(
   
 ```r
 # Summary
-summary(m_utt_time_fixed)
+summary(m_utt_type)
 
-  Family: bernoulli 
+ Family: bernoulli 
   Links: mu = logit 
-Formula: call.name.unique2 ~ start_time_calibrated + (1 | id) + (1 | context_experiment) 
-   Data: dm_v (Number of observations: 97) 
+Formula: call.name.unique2 ~ context_experiment + (1 | total_utt) + (1 | id) 
+   Data: dm_v (Number of observations: 108) 
   Draws: 4 chains, each with iter = 8000; warmup = 2000; thin = 1;
          total post-warmup draws = 24000
 
 Multilevel Hyperparameters:
-~context_experiment (Number of levels: 3) 
-              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     1.96      1.17     0.53     4.95 1.00     9767    10789
-
 ~id (Number of levels: 16) 
               Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     1.35      0.67     0.25     2.89 1.00     6452     7088
+sd(Intercept)     1.03      0.70     0.06     2.71 1.00     5825     8098
+
+~total_utt (Number of levels: 9) 
+              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+sd(Intercept)     1.54      0.72     0.41     3.26 1.00     8731     8933
 
 Regression Coefficients:
-                      Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-Intercept                -2.08      1.30    -4.81     0.41 1.00    11824    11483
-start_time_calibrated     0.14      0.04     0.07     0.23 1.00    28669    16217
-summary(m_utt_time_fixed)
+                          Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+Intercept                     0.43      0.99    -1.60     2.38 1.00    11894    13900
+context_experimentleopard     0.50      0.98    -1.41     2.46 1.00    13100    14343
+context_experimentviper      -2.68      1.15    -5.07    -0.49 1.00    13716    14822
 
 # Inspect model
-plot(m_utt_time_fixed)
-pp_check(m_utt_time_fixed, ndraws = 100)
+plot(m_utt_type)
+pp_check(m_utt_type, ndraws = 100)
  ```
 
 </details>
 
-### Extract posterior mean and CI for plot
+### Post hoc comparisons
+```r
+# Post hoc comparison 
+emm3 <- emmeans(m_utt_type, ~ context_experiment)
+# Run pairwise comparisons with Bonferroni adjustment
+pairwise_comparisons3 <- pairs(emm3, adjust = "bonferroni")
+# Print the results
+print(pairwise_comparisons3)
+contrast        estimate lower.HPD upper.HPD
+ eagle - leopard   -0.494    -2.478      1.39
+ eagle - viper      2.641     0.466      5.05
+ leopard - viper    3.112     1.210      5.16
+
+Point estimate displayed: median 
+Results are given on the log odds ratio (not the response) scale. 
+HPD interval probability: 0.95 
+```
+
+### Extract posterior mean and CI
 
 <details>
   <summary>Click to expand code</summary>
   
 ```r
-
 # Get posterior summary for the fixed effects model
-posterior_summary_fixed2 <- posterior_summary(m_utt_time_fixed)
+posterior_summary_utt_type <- posterior_summary(m_utt_type)
 
 # Convert the matrix to a data frame
-posterior_summary_df2 <- as.data.frame(posterior_summary_fixed2)
+posterior_summary_df2 <- as.data.frame(posterior_summary_utt_type)
 
 # Add the row names as a column for easier filtering
 posterior_summary_df2$.row <- rownames(posterior_summary_df2)
@@ -112,19 +131,19 @@ str(posterior_summary_df2)
 
 # Extract the coefficients with exact row name matching
 leopard_coeff2 <- posterior_summary_df2 %>%
-  filter(.row == "r_context_experiment[leopard,Intercept]") %>%
+  filter(.row == "b_context_experimentleopard") %>%
   select(Estimate, Q2.5, Q97.5)
 
 eagle_coeff2 <- posterior_summary_df2 %>%
-  filter(.row == "r_context_experiment[eagle,Intercept]") %>%
+  filter(.row == "b_Intercept") %>%
   select(Estimate, Q2.5, Q97.5)
 
 viper_coeff2 <- posterior_summary_df2 %>%
-  filter(.row == "r_context_experiment[viper,Intercept]") %>%
+  filter(.row == "b_context_experimentviper") %>%
   select(Estimate, Q2.5, Q97.5)
 
 # Check the results to confirm
-print(leopard_intercept2)
+print(leopard_coeff2)
 print(eagle_coeff2)
 print(viper_coeff2)
 
@@ -233,18 +252,18 @@ ggplot(result_long2, aes(x = Predator, y = Mean, color = Call_Type)) +
     axis.line = element_line(size = 0.5, color = "black")
   ) +
   scale_color_manual(values = c("shrill_hoo" = "#08C", "shrill" = "darkred"))+
-  scale_x_discrete(labels = custom_labels)
+  scale_x_discrete(labels = custom_labels) 
  ```
 
 </details>
 
 #### Figure. Probability of producing shrill and shrill_hoo depending on the predator type     
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
-First number bellow predator type corresponds to the number of trials, and the number below is the number of individuals.
+First number below predator type corresponds to the number of trials, and the number below is the number of individuals.
 
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/prob%20utt.jpeg?raw=true" alt="prob_utt" width="400"/>
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/prob_utt.jpeg?raw=true" alt="prob_utt" width="400"/>
 
-Tendency for  leopard response to be mostly shrill_hoo and viper response to be mostly shrills, but with large uncertainty. 
+In the viper condition, sooty mangabeys mostly produced 'shrills' (mean posterior distribution for 'shrill' = 0.94, 95%-CI[0.62–0.99] and for 'shrill_hoo' = 0.06, 95%-CI[0.01–0.38]), which was different from both the leopard and eagle conditions (pairwise post-hoc comparisons: viper vs eagle posterior median log odds ratio = 2.64, 95%-CI[0.47–5.05]; viper vs leopard = 3.11, 95%-CI[1.21–5.16]). In leopard and eagle conditions, both 'shrill' and 'shrill_hoo' were produced in similar proportions (pairwise post-hoc comparisons leopard vs eagle: posterior median log odds ration = -0.49, 95%-CI[-2.48–1.39]; leopard: mean posterior distribution for 'shrill' = 0.38, 95%-CI[0.08–0.80] and for 'shrill_hoo' = 0.62, 95%-CI[0.20–0.92]; eagle: mean posterior distribution for 'shrill' = 0.39, 95%-CI[0.08–0.83] and for 'shrill_hoo' = 0.61, 95%-CI[0.17–0.92].         
 
 ### Extract posterior mean and CI for plot 
 
