--- a/2. Predator model experiments - vocal response.md
+++ b/2. Predator model experiments - vocal response.md
@@ -259,7 +259,7 @@ ggplot(result_long2, aes(x = Predator, y = Mean, color = Call_Type)) +
 
 #### Figure. Probability of producing shrill and shrill_hoo depending on the predator type     
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
-First number below predator type corresponds to the number of trials, and the number below is the number of individuals.
+First number below predator type corresponds to the number of vocal utterances, and the number below is the number of individuals.
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/prob_utt.jpeg?raw=true" alt="prob_utt" width="400"/>
 
