Update 2. Predator model experiments - vocal response.md

--- a/2. Predator model experiments - vocal response.md
+++ b/2. Predator model experiments - vocal response.md
@@ -263,7 +263,7 @@ First number below predator type corresponds to the number of vocal utterances, 
 
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/prob_utt.jpeg?raw=true" alt="prob_utt" width="400"/>
 
-In the viper condition, sooty mangabeys mostly produced 'shrills' (mean posterior distribution for 'shrill' = 0.94, 95%-CI[0.62–0.99] and for 'shrill_hoo' = 0.06, 95%-CI[0.01–0.38]), which was different from both the leopard and eagle conditions (pairwise post-hoc comparisons: viper vs eagle posterior median log odds ratio = 2.64, 95%-CI[0.47–5.05]; viper vs leopard = 3.11, 95%-CI[1.21–5.16]). In leopard and eagle conditions, both 'shrill' and 'shrill_hoo' were produced in similar proportions (pairwise post-hoc comparisons leopard vs eagle: posterior median log odds ration = -0.49, 95%-CI[-2.48–1.39]; leopard: mean posterior distribution for 'shrill' = 0.38, 95%-CI[0.08–0.80] and for 'shrill_hoo' = 0.62, 95%-CI[0.20–0.92]; eagle: mean posterior distribution for 'shrill' = 0.39, 95%-CI[0.08–0.83] and for 'shrill_hoo' = 0.61, 95%-CI[0.17–0.92].         
+In the viper condition, sooty mangabeys mostly produced 'shrills' (mean posterior distribution for 'shrill' = 0.94, 95%-CI[0.62–0.99] and for 'shrill_hoo' = 0.06, 95%-CI[0.01–0.38]), which was different from both the leopard and eagle conditions (pairwise post-hoc comparisons: viper vs eagle posterior median log odds ratio = 2.64, 95%-CI[0.47–5.05]; viper vs leopard = 3.11, 95%-CI[1.21–5.16]). In leopard and eagle conditions, both 'shrill' and 'shrill_hoo' did not show a significant difference in the probability of their production (pairwise post-hoc comparisons leopard vs eagle: posterior median log odds ration = -0.49, 95%-CI[-2.48–1.39]; leopard: mean posterior distribution for 'shrill' = 0.38, 95%-CI[0.08–0.80] and for 'shrill_hoo' = 0.62, 95%-CI[0.20–0.92]; eagle: mean posterior distribution for 'shrill' = 0.39, 95%-CI[0.08–0.83] and for 'shrill_hoo' = 0.61, 95%-CI[0.17–0.92].         
 
 ### Extract posterior mean and CI for plot 
 
