--- a/2. Predator model experiments - vocal response.md
+++ b/2. Predator model experiments - vocal response.md
@@ -38,11 +38,12 @@ ggplot(dm_v, aes(x = begin_time_s_calibrated, y = as.factor(exp_id), color = as.
  ```
 </details>
 
-### 1. Sample size
+## 1. Sample size 
 #### Figure. Vocal utterance produced during the first 30s after the start of first vocalisation
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/all_utt.jpeg" alt="voc" width="600"/>
 
-## 2. Analyse vocal utterance type vs predator type and time of vocal production
+## 2. Analyse vocal utterance type vs predator type 
+Here we control for the total number of utterances produced per trial and for the identity of the caller.
 
 ```r
 # Run model
@@ -265,59 +266,131 @@ First number below predator type corresponds to the number of vocal utterances, 
 
 In the viper condition, sooty mangabeys mostly produced 'shrills' (mean posterior distribution for 'shrill' = 0.94, 95%-CI[0.62–0.99] and for 'shrill_hoo' = 0.06, 95%-CI[0.01–0.38]), which was different from both the leopard and eagle conditions (pairwise post-hoc comparisons: viper vs eagle posterior median log odds ratio = 2.64, 95%-CI[0.47–5.05]; viper vs leopard = 3.11, 95%-CI[1.21–5.16]). In leopard and eagle conditions, both 'shrill' and 'shrill_hoo' did not show a significant difference in the probability of their production (pairwise post-hoc comparisons leopard vs eagle: posterior median log odds ration = -0.49, 95%-CI[-2.48–1.39]; leopard: mean posterior distribution for 'shrill' = 0.38, 95%-CI[0.08–0.80] and for 'shrill_hoo' = 0.62, 95%-CI[0.20–0.92]; eagle: mean posterior distribution for 'shrill' = 0.39, 95%-CI[0.08–0.83] and for 'shrill_hoo' = 0.61, 95%-CI[0.17–0.92].         
 
-### Extract posterior mean and CI for plot 
+## 2. Analyse number of vocal utterances vs predator type 
+Here we control for the total number of utterances produced per trial and for the identity of the caller.
+
+```r
+# Data
+dmv_tot_utt <- dm_v %>%
+  distinct(exp_id, .keep_all = TRUE)
+
+# Model
+m_total_utt <- brm(
+  formula = total_utt ~ context_experiment + (1 | id),
+  family = poisson(),  
+  data = dmv_tot_utt,
+  iter = 8000,
+  warmup = 2000,
+  chains = 4,
+  control = list(adapt_delta = 0.95))
+```
+### Model summary
 
 <details>
   <summary>Click to expand code</summary>
   
 ```r
-# Step 1: Extract the summary of the fitted model to get coefficients and CI
-model_summary <- summary(m_utt_time_fixed)
+# Summary
+summary(m_total_utt)
+Family: poisson 
+  Links: mu = log 
+Formula: total_utt ~ context_experiment + (1 | id) 
+   Data: dmv_tot_utt (Number of observations: 23) 
+  Draws: 4 chains, each with iter = 8000; warmup = 2000; thin = 1;
+         total post-warmup draws = 24000
 
-# Step 2: Extract the fixed effects coefficients
-fixed_effects <- model_summary$fixed
+Multilevel Hyperparameters:
+~id (Number of levels: 16) 
+              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+sd(Intercept)     0.16      0.12     0.01     0.46 1.00     9436    12127
 
-# Step 3: Extract the start_time_calibrated coefficient and its confidence interval
-start_time_coef <- fixed_effects["start_time_calibrated", ]
-print(start_time_coef)
+Regression Coefficients:
+                          Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
+Intercept                     1.30      0.21     0.86     1.69 1.00    19823    12577
+context_experimentleopard     0.53      0.25     0.06     1.03 1.00    24723    17194
+context_experimentviper      -0.04      0.28    -0.59     0.52 1.00    22674    17567
 
-# Step 4: Ensure start_time_coef is a vector (Example Coefficients)
-start_time_coef <- c(-2.08, 0.14)  # Intercept estimate, Coefficient for start_time 
-
-# Step 5: Create a sequence of start times (e.g., from 0 to 30 seconds)
-time_seq <- seq(0, 30, length.out = 100)
-
-# Step 6: Apply the logistic model to calculate the log-odds for each value in time_seq
-log_odds <- start_time_coef[1] + start_time_coef[2] * time_seq  # Intercept + time effect
-
-# Step 7: Convert log-odds to probabilities using the logistic function
-prob_call_1 <- exp(log_odds) / (1 + exp(log_odds))  # Probability of a call (1)
-prob_call_0 <- 1 - prob_call_1  # Probability of no call (0)
-
-# Step 8: Check lengths of time_seq, prob_call_1, and prob_call_0 to ensure they match
-length(time_seq)  # Should be 100
-length(prob_call_1)  # Should be 100
-length(prob_call_0)  # Should be 100
-
-prob_call_1
-prob_call_0
-
-# Step 9: Plot the probabilities for both call (1) and non-call (0) over time
-plot(time_seq, prob_call_1, type = "l", col = "#08C", 
-     xlab = "Time of vocal production (s)", ylab = "Probability",
-     main = "", ylim = c(0, 1), , lwd = 3)
-lines(time_seq, prob_call_0, col = "darkred", lwd = 3)
-
-# Step 10: Add a legend to distinguish between call and non-call probabilities
-legend("top", legend = c("shrill_hoo", "shrill"),
-       col = c("#08C", "darkred"), lty = 1, lwd = 3)
-```
+Draws were sampled using sampling(NUTS). For each parameter, Bulk_ESS
+and Tail_ESS are effective sample size measures, and Rhat is the potential
+scale reduction factor on split chains (at convergence, Rhat = 1).
+ ```
 
 </details>
 
-#### Figure. Probability of producing shrill and shrill_hoo depending on the time of vocal production after model detection
+### Post hoc comparisons
+```r
+# Post hoc comparison 
+emm4 <- emmeans(m_total_utt , ~ context_experiment)
+pairwise_comparisons4 <- pairs(emm4, adjust = "bonferroni")
+summary(pairwise_comparisons4)
+ contrast        estimate lower.HPD upper.HPD
+ eagle - leopard  -0.5284    -1.029   -0.0625
+ eagle - viper     0.0428    -0.510    0.5946
+ leopard - viper   0.5725     0.105    1.0676
 
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/time%20utt.jpeg?raw=true" alt="prob_utt" width="400"/>
+Point estimate displayed: median 
+Results are given on the log (not the response) scale. 
+HPD interval probability: 0.95 
+```
 
-shrills are most likely to occur first, followed by shrill_hoos
+### Extract posterior mean and CI
 
+<details>
+  <summary>Click to expand code</summary>
+  
+```r
+# Extract conditional effects
+ce_m_total_utt <- conditional_effects(m_total_utt)
+
+# Calculate the mean for the 'estimate__' column 
+mean_total_utt <- sapply(ce_m_total_utt$context_experiment$estimate__, mean)
+
+# Extract the 'context_experiment' 
+ce_m_total_utt$context_experiment
+
+# Manually creating the data frame to store the results
+total_utt_results <- data.frame(
+  condition = c("eagle", "leopard", "viper"),  # Conditions
+  mean = c(3.715066, 6.300899, 3.559118),     # Mean estimates from ce_m_total_utt
+  lower_CI = c(2.366335, 4.548161, 2.354735), # Lower CI estimates
+  upper_CI = c(5.420849, 8.414527, 5.120808)  # Upper CI estimates
+)
+
+# Check the resulting data frame
+total_utt_results
+
+# Custom labels for x-axis, e.g., sample size
+custom_labels_tot <- c("Eagle\n22\n7", "Leopard\n48\n8", "Viper\n27\n8")
+
+# Plot
+ggplot() +
+  # Raw data points with jitter for visibility
+  geom_point(data = dmv_tot_utt, aes(x = context_experiment, y = total_utt, color = context_experiment),
+             position = position_jitter(width = 0.2), alpha = 0.6, size = 1.5) +
+  # Mean points for each condition
+  geom_point(data = total_utt_results, aes(x = condition, y = mean, color = condition), size = 4) +
+  # Error bars without whiskers
+  geom_linerange(data = total_utt_results, aes(x = condition, ymin = lower_CI, ymax = upper_CI, color = condition), size = 1) +
+  # Labels and theme
+  labs(x = NULL, y = "Number of vocal utterances") +
+  theme_minimal() +
+  theme( panel.grid.major = element_blank(),  # Remove major grid lines
+         panel.grid.minor = element_blank(),  # Remove minor grid lines
+         text = element_text(size = 14),      # General text size
+         axis.text = element_text(size = 12), # Axis text size
+         axis.line = element_line(size = 0.5, color = "black")) +         
+  scale_x_discrete(labels = custom_labels_tot) +
+  scale_color_manual(values = c("eagle" = "#070707", "leopard" = "orange", "viper" = "#08C45D"))  + # Custom colours
+  guides(color = "none")  # Remove legend
+ ```
+
+</details>
+
+#### Figure. Number of vocal utterances per trial depending on the predator type (during the first 30s after producing the first vocal utterance)     
+The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
+First number below predator type corresponds to the number of trials (one caller per trial).
+
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/n_utt.jpeg?raw=true" alt="n_utt" width="400"/>
+
+Sooty mangabeys produced significantly more utterances in the leopard condition (mean posterior distribution = 6.30, 95%-CI[4.55–8.41]) than in both the eagle condition (mean posterior distribution = 3.72, 95%-CI[2.37–5.42]) and the viper condition (mean posterior distribution = 3.56, 95%-CI[2.35–5.12]) (pairwise post-hoc comparisons: leopard vs eagle posterior median log odds ratio = -0.53, 95%-CI[-1.03–-0.06]; leopard vs viper = 0.57, 95%-CI[0.11–1.07]). We did not find differences in the overall number of vocal utterances between eagle and viper conditions (pairwise post-hoc comparisons: eagle vs viper posterior median log odds ratio = 0.04, 95%-CI[-0.51–0.59]). 
+     
