Update 2. Predator model experiments - vocal response.md

--- a/2. Predator model experiments - vocal response.md
+++ b/2. Predator model experiments - vocal response.md
@@ -1,7 +1,7 @@
 # Predator model experiment - vocal responses
 Here we analyse the vocal responses of sooty mangabeys when presented with realistic models of leopard, eagle and viper (Gaboon and Rhinoceros). 
 We coded and used for analysis all vocalisations occurring during the first 30s after the start of the first vocalisation. 
-We ensured that vocalisations were provoked by the predator by excluding N = 2 trials were vocalisations started more than 1 min after model detection by the focal individual.
+We ensured that vocalisations were provoked by the predator by excluding N = 2 trials were vocalisations started more than 30s after model detection by the focal individual.
 
 ### Data
 Details on dataset processing.
