Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -17,7 +17,7 @@ Bipedalism has already been found when encountering vipers, but I need to find p
 ### Data
 ```r
 # Dataset
-# select the datafile "mangabey behaviour2" 
+# select the datafile "mangabey behaviour" 
 csvFile <- file.choose()
 
 dm_b2 = read.csv(csvFile, header=T)
