Update 2. Predator model experiments - vocal response.md

--- a/2. Predator model experiments - vocal response.md
+++ b/2. Predator model experiments - vocal response.md
@@ -10,7 +10,7 @@ Details on dataset processing.
   
 ```r
 # Dataset
-# select the datafile "mangabey call wide2" 
+# select the datafile "mangabey call wide" 
 csvFile <- file.choose()
 
 dm_v  = read.csv(csvFile, header=T)
