Update 2a. Predator model experiments - vocal response.md

--- a/2a. Predator model experiments - vocal response.md
+++ b/2a. Predator model experiments - vocal response.md
@@ -21,7 +21,7 @@ dm2 <- dm %>%
     exp_id, call_id, utt_id, rec_id, id, unit_type, unit_interval, unit_rank,
     date, sex, ageclass, group, context_experiment, 
      quality, begin_time_s_calibrated,
-    agg_entropy_bits, avg_entropy_bits, center_time_rel, peak_time_relative,
+    agg_entropy_bits, avg_entropy_bits, center_time_rel, peak_time_relative, delta_time_s,
     time_25_rel, time_5_rel, time_75_rel, time_95_rel, pfc_avg_slope_hzms, peak_freq_hz)
 
  ```
@@ -36,7 +36,7 @@ dm2 <- dm %>%
 # Dataset only with acoustic parameters 
  data_cor <- dm2 %>% 
    subset(quality == 1) %>% 
-   dplyr::select(agg_entropy_bits, avg_entropy_bits, center_time_rel, peak_time_relative,
+   dplyr::select(agg_entropy_bits, avg_entropy_bits, center_time_rel, peak_time_relative, delta_time_s,
                  time_25_rel, time_5_rel, time_75_rel, time_95_rel, pfc_avg_slope_hzms, peak_freq_hz)
  
  
@@ -76,7 +76,7 @@ Mundry, R., & Sommer, C. (2007). Discriminant function analysis with nonindepend
 # Run PDFA
  pdfa.res.a <- pDFA.incomplete(test.fac = "unit_type", 
                                contr.fac = "id", 
-                               variables = c("avg_entropy_bits", "center_time_rel", "peak_time_relative",
+                               variables = c("avg_entropy_bits", "center_time_rel", "peak_time_relative", delta_time_s,
                                              "time_25_rel", "time_5_rel", "time_75_rel", "time_95_rel", "pfc_avg_slope_hzms", "peak_freq_hz"), 
                                balance.contr.fac.contrib = "mode",
                                n.sel = 100, 
@@ -89,17 +89,17 @@ Mundry, R., & Sommer, C. (2007). Discriminant function analysis with nonindepend
  pdfa.res.a
 
  > pdfa.res.a
-                                                             pdfa.res.a
+
 no.corr.classified.selected                                          20
-expected.no.corr.classified.selected                   16.6476476476476
+expected.no.corr.classified.selected                   17.1751751751752
 percent.correctly.classified.selected                               100
-expected.percent.correctly.classified.selected         83.2382382382382
-P.for.selected                                                    0.043
-no.corr.cross.classified                                         373.09
-expected.no.corr.cross.classified                      219.306306306306
-percent.corr.cross.classified                          94.2146464646465
-expected.percent.corr.cross.classified                 55.3803803803804
-P.for.cross.classified                                            0.001
+expected.percent.correctly.classified.selected         85.8758758758759
+P.for.selected                                                    0.075
+no.corr.cross.classified                                          372.7
+expected.no.corr.cross.classified                      217.364364364364
+percent.corr.cross.classified                          94.1161616161616
+expected.percent.corr.cross.classified                 54.8899910011021
+P.for.cross.classified                                            0.002
 no.levels.contr.factor                                               16
 no.levels.test.factor                                                 2
 no.cases                                                            416
