--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -1,6 +1,6 @@
 # Predator model experiment - behaviours
 Here we analyse the behavioural responses (all but vocal responses) of sooty mangabeys when presented with realistic models of leopard, eagle and viper (Gaboon and Rhinoceros). 
-We coded and used for analysis all behaviours occurring during the first 30s after model detection by the focal individual.
+We coded and used for analysis all behaviours occurring during the first 30s after model detection by the focal individual. This means we used only the initial response given by the individual detecting the predator. 
 
 ### Main findings
 #### Fleeing behaviours
@@ -88,7 +88,7 @@ Fleeing was observed in 85.2% of trials (N = 23), making it the most frequent be
   subset(behaviour == "f")
 
 # Run model
-m_flee_dur <- brm(
+m_flee_dur2 <- brm(
   formula = flee_duration ~ context_experiment + (1 | id),
   data = dm_b2_f_dur,
   family = Gamma(link = "identity"),
@@ -102,40 +102,56 @@ m_flee_dur <- brm(
 
 ```r
 # Summary
-summary(m_flee_dur)
+summary(m_flee_dur2)
+Family: gamma 
+  Links: mu = identity; shape = identity 
+Formula: flee_duration ~ context_experiment + (1 | id) 
+   Data: dm_b2_f_dur (Number of observations: 23) 
+  Draws: 4 chains, each with iter = 4000; warmup = 2000; thin = 1;
+         total post-warmup draws = 8000
+
 Multilevel Hyperparameters:
 ~id (Number of levels: 16) 
               Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     0.50      0.41     0.02     1.53 1.00     2993     3492
+sd(Intercept)     0.49      0.41     0.02     1.49 1.00     3290     3491
 
 Regression Coefficients:
                           Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-Intercept                     3.79      1.20     2.10     6.86 1.00     5151     3207
-context_experimentleopard     4.50      1.98     0.61     8.62 1.00     4993     3856
-context_experimentviper      -2.02      1.26    -5.07    -0.05 1.00     5047     3307
+Intercept                     3.82      1.23     2.07     6.82 1.00     4014     2729
+context_experimentleopard     4.48      2.00     0.53     8.54 1.00     3760     3259
+context_experimentviper      -2.05      1.29    -5.11    -0.02 1.00     4085     2610
 
 Further Distributional Parameters:
       Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-shape     3.30      1.10     1.58     5.84 1.00     5981     4779
+shape     3.27      1.09     1.57     5.82 1.00     5328     4926
+
+Draws were sampled using sampling(NUTS). For each parameter, Bulk_ESS
+and Tail_ESS are effective sample size measures, and Rhat is the potential
+scale reduction factor on split chains (at convergence, Rhat = 1).
 
 # Inspect model 
-plot(m_flee_dur)
-pp_check(m_flee_dur, ndraws = 100)
+pp_check(m_flee_dur2, ndraws = 100)
  ```
 </details> 
+
+#### Posterior predictive check
+<details>
+  <summary>Click to expand code</summary>
+  
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/flee_duration_pp.jpeg" alt="flee_d_pp" width="400"/>
+
+</details>   
 
 ### Post hoc comparison 
 ```r
 # Post hoc comparison 
-emm <- emmeans(m_flee_dur, ~ context_experiment)
-# Run pairwise comparisons with Bonferroni adjustment
-pairwise_comparisons <- pairs(emm, adjust = "bonferroni")
-# Print the results
-print(pairwise_comparisons)
- contrast        estimate lower.HPD upper.HPD
- eagle - leopard    -4.46    -8.672    -0.683
- eagle - viper       1.85    -0.302     4.496
- leopard - viper     6.36     3.459     9.938
+emm <- pairs(emmeans(m_flee_dur2, ~ context_experiment))
+print(emm)
+
+contrast        estimate lower.HPD upper.HPD
+ eagle - leopard    -4.47    -8.609    -0.608
+ eagle - viper       1.88    -0.161     4.728
+ leopard - viper     6.37     3.468     9.824
 
 Point estimate displayed: median 
 HPD interval probability: 0.95 
@@ -146,23 +162,21 @@ HPD interval probability: 0.95
   
 ```r
 # Extract conditional effects for the flee_duration model
-ce_m_flee_dur <- conditional_effects(m_flee_dur)
+ce_m_flee_dur <- conditional_effects(m_flee_dur2)
 
 # Calculate the mean for the 'estimate__' column in the flee_duration data frame
 mean_flee_duration <- sapply(ce_m_flee_dur$context_experiment$estimate__, mean)
 
-# Extract the 'context_experiment' data frame for further examination
+# Check 'context_experiment' data frame 
 ce_m_flee_dur$context_experiment
 
-# Create a data frame for the results
-flee_duration_results <- data.frame(
-  condition = c("eagle", "leopard", "viper"),  # Conditions
-  mean = c(3.587429, 8.094366, 1.720234),     # Mean estimates from ce_m_flee_dur
-  lower_CI = c(2.096110, 5.692541, 1.106940), # Lower CI estimates from ce_m_flee_dur
-  upper_CI = c(6.855647, 12.015303, 2.804658) # Upper CI estimates from ce_m_flee_dur
-)
+# Exact estimates and CIs
+flee_duration_results <- ce_m_flee_dur$context_experiment %>%
+  select(condition = context_experiment, 
+         mean = estimate__, 
+         lower_CI = lower__, 
+         upper_CI = upper__) 
 
-# View the updated data frame
 print(flee_duration_results)
 
 # Custom labels for x-axis, e.g., sample size
@@ -194,11 +208,11 @@ ggplot() +
 #### Figure. Flee duration in s recorded depending on the type of predator     
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
 
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20duration2.jpeg" alt="flee_d" width="400"/>
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/flee_duration_plot.jpeg" alt="flee_d" width="400"/>
 
-In the analysis of flee duration, the mean flee duration was shortest in the viper condition (mean posterior distribution = 1.72, 95%-CI [1.11–2.80]), followed by the eagle condition (mean posterior distribution = 3.59, 95%-CI [2.10–6.86]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.09, 95%-CI [5.69–12.02]).
+In the analysis of flee duration, the mean flee duration was shortest in the viper condition (mean posterior distribution = 1.70, 95%-CI [1.11–2.79]), followed by the eagle condition (mean posterior distribution = 3.61, 95%-CI [2.07–6.82]), and the longest duration was observed in the leopard condition (mean posterior distribution = 8.10, 95%-CI [5.68–12.04]).
 
-The pairwise comparisons showed that flee duration in the leopard condition was significantly longer than in the eagle (estimate = -4.46, 95%-CI [-8.67–-0.68]) and viper (estimate = 6.36, 95%-CI [3.46–9.94]) conditions. In contrast, flee duration in the eagle condition was not significantly different from the viper condition, although there was a tendency towards a longer flee duration in the eagle condition (estimate = 1.85, 95%-CI [-0.30–4.50]).
+The pairwise comparisons showed that flee duration in the leopard condition was significantly longer than in the eagle (estimate = -4.47, 95%-CI [-8.61–-0.61]) and viper (estimate = 6.37, 95%-CI [3.47–9.82]) conditions. In contrast, flee duration in the eagle condition was not significantly different from the viper condition, although there was a tendency towards a longer flee duration in the eagle condition (estimate = 1.88, 95%-CI [-0.16–4.73]).
 
 ## 3. Analyse flee direction
 ### Model
