Update 1. Predator model experiments - behaviour.md

--- a/1. Predator model experiments - behaviour.md
+++ b/1. Predator model experiments - behaviour.md
@@ -216,6 +216,9 @@ The pairwise comparisons showed that flee duration in the leopard condition was 
 
 ## 3. Analyse flee direction
 ### Model
+
+We did not include individual identity as a random effect in the model examining flee direction because the response variable was binary (Bernoulli distribution) and individuals contributed few observations each (10 individuals had only 1 observation, 5 had 2 observations, and 1 had 3 observations), making the estimation of between-individual variation unreliable and prone to convergence issues.
+
 ```r
 # Subset + create variable flee_direction2 to merge direction same (straight) and down into 0 and up into 1
 dm_b2_f_dir <- dm_b2 %>%
@@ -225,12 +228,12 @@ dm_b2_f_dir <- dm_b2 %>%
       TRUE ~ 0))                    # Any other direction gets 0
 
 # Run model
-m_flee_dir2_fixed <- brm(
-  flee_direction2 ~ context_experiment + (1 | id),
+m_flee_dir <- brm(
+  flee_direction2 ~ context_experiment,
   data = dm_b2_f_dir,
   family = bernoulli(),
-  chains = 4, iter = 8000, warmup = 4000,
-  control = list(adapt_delta = 0.99, max_treedepth = 15))
+  chains = 4, iter = 4000, warmup = 1000,
+  control = list(adapt_delta = 0.99))
 ```
 
 #### Model summary
@@ -239,40 +242,37 @@ m_flee_dir2_fixed <- brm(
 
 ```r
 # Summary
-summary(m_flee_dir2_fixed)
-Multilevel Hyperparameters:
-Multilevel Hyperparameters:
-~id (Number of levels: 16) 
-              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     8.94     14.74     0.43    47.25 1.00     1946     1408
+summary(m_flee_dir)
+ Family: bernoulli 
+  Links: mu = logit 
+Formula: flee_direction2 ~ context_experiment 
+   Data: dm_b2_f_dir (Number of observations: 23) 
+  Draws: 4 chains, each with iter = 4000; warmup = 1000; thin = 1;
+         total post-warmup draws = 12000
 
 Regression Coefficients:
                           Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-Intercept                    -2.99     11.27   -29.30     5.70 1.00     2959     1306
-context_experimentleopard    20.03     24.22     2.48    80.38 1.00     2274     1327
-context_experimentviper      -1.52      9.16   -19.25    12.18 1.00     3131     1625
+Intercept                     0.41      1.01    -1.57     2.53 1.00     4251     4603
+context_experimentleopard     8.64      7.66     1.00    27.94 1.00     1671     1406
+context_experimentviper      -0.73      1.26    -3.28     1.73 1.00     3294     3307
 
+Draws were sampled using sampling(NUTS). For each parameter, Bulk_ESS
+and Tail_ESS are effective sample size measures, and Rhat is the potential
+scale reduction factor on split chains (at convergence, Rhat = 1).
 
 # Inspect model
-plot(m_flee_dir2_fixed)
-pp_check(m_flee_dir2_fixed, ndraws = 100)
+pp_check(m_flee_dir, ndraws = 100)
  ```
 </details> 
 
-### Post hoc comparison 
-```r
-# Post hoc comparison 
-emm2 <- emmeans(m_flee_dir2_fixed, ~ context_experiment)
-# Run pairwise comparisons with Bonferroni adjustment
-pairwise_comparisons2 <- pairs(emm2, adjust = "bonferroni")
-# Print the results
-print(pairwise_comparisons2)
+#### Posterior predictive check
+<details>
+  <summary>Click to expand code</summary>
+  
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/flee_direction_pp.jpeg" alt="flee_dir_pp" width="400"/>
 
- contrast        estimate lower.HPD upper.HPD
- eagle - leopard   -13.27    -59.54    -0.211
- eagle - viper       1.21    -13.13    18.108
- leopard - viper    14.83      1.13    62.456
-```
+</details>   
+
 
 ### Extract posterior distribution mean and CI for plot
 <details>
@@ -280,7 +280,7 @@ print(pairwise_comparisons2)
   
 ```r
 # Extract the summary of the model
-model_summary <- summary(m_flee_dir2_fixed)
+model_summary <- summary(m_flee_dir)
 
 # View the names of the columns in the fixed effects section
 colnames(model_summary$fixed)
@@ -318,25 +318,12 @@ viper_Prob <- plogis(viper_log_odds)
 viper_Lower_Prob <- plogis(viper_Lower)
 viper_Upper_Prob <- plogis(viper_Upper)
 
-# Print the probabilities to check
-print(Intercept_Prob)
-print(Intercept_Lower_Prob)
-print(Intercept_Upper_Prob)
-
-print(leopard_Prob)
-print(leopard_Lower_Prob)
-print(leopard_Upper_Prob)
-
-print(viper_Prob)
-print(viper_Lower_Prob)
-print(viper_Upper_Prob)
-
 # Create the dataframe with the context and probabilities
 results_df <- data.frame(
   Context = c("eagle", "leopard", "viper"),
-  Estimate_Prob = c(0.0478728, 1.0000000, 0.1795729),
-  Lower_Prob = c(1.875836e-13, 0.9228683, 4.366075e-09),
-  Upper_Prob = c(0.9966688, 1.0000000, 0.9999949))
+  Estimate_Prob = c(Intercept_Prob,  leopard_Prob, viper_Prob),
+  Lower_Prob = c(Intercept_Lower_Prob, leopard_Lower_Prob, viper_Lower_Prob),
+  Upper_Prob = c(Intercept_Upper_Prob, leopard_Upper_Prob, viper_Upper_Prob))
 
 # Print the results
 print(results_df)
@@ -373,10 +360,9 @@ ggplot(results_df, aes(x = Context, y = Estimate_Prob, color = Context)) +
 #### Figure. Probability of fleeing up depending on predator type    
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
 
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/Flee%20direction3.jpeg" alt="flee_di" width="400"/>
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/flee_direction_plot.jpeg" alt="flee_di" width="400"/>
 
-
-We found consistent support that the probability of fleeing upwards was high in the leopard condition (mean probability and 95% CI for fleeing up = 1, 95%-CI[0.92–1.00]) compared to eagle and viper (pariwise post-hoc comparisons: eagle vs leopard estimate -13.27, 95%-CI [-59.54–-0.21]; eagle vs viper estimate 1.21, 95%-CI [-13.13–18.11]; leopard vs viper estimate = 14.83, 95%-CI [1.13–62.46]. Eagle and viper conditions did not show significant preferences for one direction (mean probability and 95% CI for fleeing up in eagle = 0.05, 95%-CI[0.00–1.00]; mean probability and 95% CI for fleeing up in viper = 0.18, 95%-CI[0.00–1.00]. 
+We found consistent support that the probability of fleeing upwards was high in the leopard condition (mean probability and 95% CI for fleeing up = 1, 95%-CI[0.73–1.00]). Eagle and viper conditions did not show significant preferences for one direction (mean probability and 95% CI for fleeing up in eagle = 0.60, 95%-CI[0.17–0.93]; mean probability and 95% CI for fleeing up in viper = 0.33, 95%-CI[0.04–0.85]. 
 
 
 #### Table. Position in the canopy after fleeing depending on predator type
