--- a/2b. Predator model experiments - vocal response.md
+++ b/2b. Predator model experiments - vocal response.md
@@ -43,18 +43,17 @@ ggplot(dm_v, aes(x = begin_time_s_calibrated, y = as.factor(exp_id), color = as.
 <img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/all_utt.jpeg" alt="voc" width="600"/>
 
 ## 2. Analyse vocal utterance type vs predator type 
-Here we control for the total number of utterances produced per trial and for the identity of the caller.
+
+We controlled for variability between experimental trials as a random effect, since the number of observations for each call type varied significantly across trials. This ensures that any observed effects of the context on call type probability are not confounded by differences in the number of calls. We did not control for the identity of individuals as a random effect because the number of observations per individual was highly variable, with some individuals contributing only one or two observations. This uneven sampling could have led to unstable estimates for individual-level random effects, so we opted to exclude id to avoid potential model instability and ensure reliable estimates. 
 
 ```r
 # Run model
 m_utt_type <- brm(
-  formula = call.name.unique2 ~ context_experiment + (1 | total_utt) + (1 | id),
+  formula = call.name.unique2 ~ context_experiment + (1 | exp_id),
   family = bernoulli(),
   data = dm_v,
-  iter = 8000, 
-  warmup = 2000,  
-  chains = 4,
-  control = list(adapt_delta = 0.95))
+  iter = 4000, 
+  chains = 4)
 ```
 ### Model summary
 
@@ -65,52 +64,42 @@ m_utt_type <- brm(
 # Summary
 summary(m_utt_type)
 
- Family: bernoulli 
+Family: bernoulli 
   Links: mu = logit 
-Formula: call.name.unique2 ~ context_experiment + (1 | total_utt) + (1 | id) 
+Formula: call.name.unique2 ~ context_experiment + (1 | exp_id) 
    Data: dm_v (Number of observations: 108) 
-  Draws: 4 chains, each with iter = 8000; warmup = 2000; thin = 1;
-         total post-warmup draws = 24000
+  Draws: 4 chains, each with iter = 4000; warmup = 2000; thin = 1;
+         total post-warmup draws = 8000
 
 Multilevel Hyperparameters:
-~id (Number of levels: 16) 
+~exp_id (Number of levels: 23) 
               Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     1.03      0.70     0.06     2.71 1.00     5825     8098
-
-~total_utt (Number of levels: 9) 
-              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     1.54      0.72     0.41     3.26 1.00     8731     8933
+sd(Intercept)     2.21      0.76     1.08     3.97 1.00     2701     4117
 
 Regression Coefficients:
                           Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-Intercept                     0.43      0.99    -1.60     2.38 1.00    11894    13900
-context_experimentleopard     0.50      0.98    -1.41     2.46 1.00    13100    14343
-context_experimentviper      -2.68      1.15    -5.07    -0.49 1.00    13716    14822
+Intercept                     0.67      1.07    -1.37     2.88 1.00     2803     3658
+context_experimentleopard     1.09      1.47    -1.74     4.07 1.00     2790     3776
+context_experimentviper      -3.58      1.84    -7.89    -0.61 1.00     2877     3271
+
+Draws were sampled using sampling(NUTS). For each parameter, Bulk_ESS
+and Tail_ESS are effective sample size measures, and Rhat is the potential
+scale reduction factor on split chains (at convergence, Rhat = 1).
 
 # Inspect model
-plot(m_utt_type)
 pp_check(m_utt_type, ndraws = 100)
  ```
 
 </details>
 
-### Post hoc comparisons
-```r
-# Post hoc comparison 
-emm3 <- emmeans(m_utt_type, ~ context_experiment)
-# Run pairwise comparisons with Bonferroni adjustment
-pairwise_comparisons3 <- pairs(emm3, adjust = "bonferroni")
-# Print the results
-print(pairwise_comparisons3)
-contrast        estimate lower.HPD upper.HPD
- eagle - leopard   -0.494    -2.478      1.39
- eagle - viper      2.641     0.466      5.05
- leopard - viper    3.112     1.210      5.16
+#### Posterior predictive check
+<details>
+  <summary>Click to expand code</summary>
+  
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/utt_type_pp.jpeg" alt="utt_pp" width="400"/>
 
-Point estimate displayed: median 
-Results are given on the log odds ratio (not the response) scale. 
-HPD interval probability: 0.95 
-```
+</details>   
+
 
 ### Extract posterior mean and CI
 
@@ -262,9 +251,10 @@ ggplot(result_long2, aes(x = Predator, y = Mean, color = Call_Type)) +
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
 First number below predator type corresponds to the number of vocal utterances, and the number below is the number of individuals.
 
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/prob_utt.jpeg?raw=true" alt="prob_utt" width="400"/>
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/utt_type_plot.jpeg" alt="prob_utt" width="400"/>
 
-In the viper condition, sooty mangabeys mostly produced 'shrills' (mean posterior distribution for 'shrill' = 0.94, 95%-CI[0.62–0.99] and for 'shrill_hoo' = 0.06, 95%-CI[0.01–0.38]), which was different from both the leopard and eagle conditions (pairwise post-hoc comparisons: viper vs eagle posterior median log odds ratio = 2.64, 95%-CI[0.47–5.05]; viper vs leopard = 3.11, 95%-CI[1.21–5.16]). In leopard and eagle conditions, both 'shrill' and 'shrill_hoo' did not show a significant difference in the probability of their production (pairwise post-hoc comparisons leopard vs eagle: posterior median log odds ration = -0.49, 95%-CI[-2.48–1.39]; leopard: mean posterior distribution for 'shrill' = 0.38, 95%-CI[0.08–0.80] and for 'shrill_hoo' = 0.62, 95%-CI[0.20–0.92]; eagle: mean posterior distribution for 'shrill' = 0.39, 95%-CI[0.08–0.83] and for 'shrill_hoo' = 0.61, 95%-CI[0.17–0.92].         
+In the viper condition, sooty mangabeys mostly produced 'shrills' (mean posterior distribution for 'shrill' = 0.97, 95%-CI[0.65–1] and for 'shrill_hoo' = 0.03, 95%-CI[0.0004–0.35]). In leopard and eagle conditions, both 'shrill' and 'shrill_hoo' did not show a significant difference in the probability of their production (leopard: mean posterior distribution for 'shrill' = 0.25, 95%-CI[0.02–0.85] and for 'shrill_hoo' = 0.75, 95%-CI[0.15–0.98]; eagle: mean posterior distribution for 'shrill' = 0.34, 95%-CI[0.05–0.80] and for 'shrill_hoo' = 0.66, 95%-CI[0.20–0.95].         
+
 
 ## 2. Analyse number of vocal utterances vs predator type 
 Here we control for the total number of utterances produced per trial and for the identity of the caller.
