--- a/2b. Predator model experiments - vocal response.md
+++ b/2b. Predator model experiments - vocal response.md
@@ -257,7 +257,6 @@ In the viper condition, sooty mangabeys mostly produced 'shrills' (mean posterio
 
 
 ## 2. Analyse number of vocal utterances vs predator type 
-Here we control for the total number of utterances produced per trial and for the identity of the caller.
 
 ```r
 # Data
@@ -266,11 +265,10 @@ dmv_tot_utt <- dm_v %>%
 
 # Model
 m_total_utt <- brm(
-  formula = total_utt ~ context_experiment + (1 | id),
-  family = poisson(),  
+  formula = total_utt ~ context_experiment,
+  family = poisson(),
   data = dmv_tot_utt,
-  iter = 8000,
-  warmup = 2000,
+  iter = 4000,
   chains = 4,
   control = list(adapt_delta = 0.95))
 ```
@@ -282,41 +280,48 @@ m_total_utt <- brm(
 ```r
 # Summary
 summary(m_total_utt)
+
 Family: poisson 
   Links: mu = log 
-Formula: total_utt ~ context_experiment + (1 | id) 
+Formula: total_utt ~ context_experiment 
    Data: dmv_tot_utt (Number of observations: 23) 
-  Draws: 4 chains, each with iter = 8000; warmup = 2000; thin = 1;
-         total post-warmup draws = 24000
-
-Multilevel Hyperparameters:
-~id (Number of levels: 16) 
-              Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-sd(Intercept)     0.16      0.12     0.01     0.46 1.00     9436    12127
+  Draws: 4 chains, each with iter = 4000; warmup = 2000; thin = 1;
+         total post-warmup draws = 8000
 
 Regression Coefficients:
                           Estimate Est.Error l-95% CI u-95% CI Rhat Bulk_ESS Tail_ESS
-Intercept                     1.30      0.21     0.86     1.69 1.00    19823    12577
-context_experimentleopard     0.53      0.25     0.06     1.03 1.00    24723    17194
-context_experimentviper      -0.04      0.28    -0.59     0.52 1.00    22674    17567
+Intercept                     1.33      0.20     0.92     1.69 1.00     4260     4196
+context_experimentleopard     0.53      0.24     0.08     1.02 1.00     4535     4562
+context_experimentviper      -0.06      0.27    -0.60     0.48 1.00     4286     4340
 
 Draws were sampled using sampling(NUTS). For each parameter, Bulk_ESS
 and Tail_ESS are effective sample size measures, and Rhat is the potential
 scale reduction factor on split chains (at convergence, Rhat = 1).
+
+# Inspect model
+pp_check(m_total_utt , ndraws = 100)
  ```
 
 </details>
 
+#### Posterior predictive check
+<details>
+  <summary>Click to expand code</summary>
+  
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/utt_total_pp.jpeg" alt="utt_tot_pp" width="400"/>
+
+</details>   
+
 ### Post hoc comparisons
 ```r
 # Post hoc comparison 
-emm4 <- emmeans(m_total_utt , ~ context_experiment)
-pairwise_comparisons4 <- pairs(emm4, adjust = "bonferroni")
-summary(pairwise_comparisons4)
+emm4 <- pairs(emmeans(m_total_utt, ~ context_experiment))
+print(emm4)
+
  contrast        estimate lower.HPD upper.HPD
- eagle - leopard  -0.5284    -1.029   -0.0625
- eagle - viper     0.0428    -0.510    0.5946
- leopard - viper   0.5725     0.105    1.0676
+ eagle - leopard  -0.5242    -1.000   -0.0645
+ eagle - viper     0.0635    -0.502    0.5754
+ leopard - viper   0.5885     0.134    1.0569
 
 Point estimate displayed: median 
 Results are given on the log (not the response) scale. 
@@ -338,19 +343,22 @@ mean_total_utt <- sapply(ce_m_total_utt$context_experiment$estimate__, mean)
 # Extract the 'context_experiment' 
 ce_m_total_utt$context_experiment
 
-# Manually creating the data frame to store the results
+# Extract the 'context_experiment' data frame for further examination
+context_experiment_results <- ce_m_total_utt$context_experiment
+
+# Create the results table by extracting relevant columns
 total_utt_results <- data.frame(
-  condition = c("eagle", "leopard", "viper"),  # Conditions
-  mean = c(3.715066, 6.300899, 3.559118),     # Mean estimates from ce_m_total_utt
-  lower_CI = c(2.366335, 4.548161, 2.354735), # Lower CI estimates
-  upper_CI = c(5.420849, 8.414527, 5.120808)  # Upper CI estimates
+  condition = context_experiment_results$context_experiment,  # Conditions
+  mean = context_experiment_results$estimate__,              # Mean estimates
+  lower_CI = context_experiment_results$lower__,             # Lower CI estimates
+  upper_CI = context_experiment_results$upper__              # Upper CI estimates
 )
 
-# Check the resulting data frame
-total_utt_results
+# Print the results table
+print(total_utt_results)
 
 # Custom labels for x-axis, e.g., sample size
-custom_labels_tot <- c("Eagle\n22\n7", "Leopard\n48\n8", "Viper\n27\n8")
+custom_labels_tot <- c("Eagle\n7", "Leopard\n8", "Viper\n8")
 
 # Plot
 ggplot() +
@@ -362,7 +370,7 @@ ggplot() +
   # Error bars without whiskers
   geom_linerange(data = total_utt_results, aes(x = condition, ymin = lower_CI, ymax = upper_CI, color = condition), size = 1) +
   # Labels and theme
-  labs(x = NULL, y = "Number of vocal utterances") +
+  labs(x = NULL, y = "N vocal utterances") +
   theme_minimal() +
   theme( panel.grid.major = element_blank(),  # Remove major grid lines
          panel.grid.minor = element_blank(),  # Remove minor grid lines
@@ -380,7 +388,6 @@ ggplot() +
 The bars represent the credible interval at 95% and the point is the mean posterior distribution of the model.
 First number below predator type corresponds to the number of trials (one caller per trial).
 
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/n_utt.jpeg?raw=true" alt="n_utt" width="400"/>
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/utt_total_plot.jpeg" alt="utt_tot_plot" width="400"/>
 
-Sooty mangabeys produced significantly more utterances in the leopard condition (mean posterior distribution = 6.30, 95%-CI[4.55–8.41]) than in both the eagle condition (mean posterior distribution = 3.72, 95%-CI[2.37–5.42]) and the viper condition (mean posterior distribution = 3.56, 95%-CI[2.35–5.12]) (pairwise post-hoc comparisons: leopard vs eagle posterior median log odds ratio = -0.53, 95%-CI[-1.03–-0.06]; leopard vs viper = 0.57, 95%-CI[0.11–1.07]). We did not find differences in the overall number of vocal utterances between eagle and viper conditions (pairwise post-hoc comparisons: eagle vs viper posterior median log odds ratio = 0.04, 95%-CI[-0.51–0.59]). 
-     
+Sooty mangabeys produced significantly more utterances in the leopard condition (mean posterior distribution = 6.46, 95%-CI[4.85–8.43]) than in both the eagle condition (mean posterior distribution = 3.81, 95%-CI[2.51–5.42]) and the viper condition (mean posterior distribution = 3.58, 95%-CI[2.40–5.08]) (pairwise post-hoc comparisons: leopard vs eagle posterior median log odds ratio = -0.52, 95%-CI[-1.00–-0.06]; leopard vs viper = 0.59, 95%-CI[0.13–1.06]). We did not find differences in the overall number of vocal utterances between eagle and viper conditions (pairwise post-hoc comparisons: eagle vs viper posterior median log odds ratio = 0.06, 95%-CI[-0.50–0.58]). 
