Update 2a. Vocal responses - acoustic analyses.md

--- a/2a. Vocal responses - acoustic analyses.md
+++ b/2a. Vocal responses - acoustic analyses.md
@@ -68,6 +68,10 @@ For details see:
 Mundry, R., & Sommer, C. (2007). Discriminant function analysis with nonindependent data: consequences and an alternative. Animal Behaviour, 74(4), 965-976.
 
 ### Discrimination between shrills and hoos
+
+<details>
+  <summary>Click to expand code</summary>
+
 ```r
 # Subset with shrills and hoos (no growls because N = 8)
  all_pdfa <- dm %>% 
@@ -119,3 +123,7 @@ balance.contr.fac.contrib                                          mode
 1 hoo           68           10
 2 shrill       348           16
  ```
+
+</details>
+
+N = 348 ‘shrills’ from N = 16 individuals, N = 68 ‘hoos’, from N = 10 individuals, p = 0.002, correctly cross-classified = 94%, expected = 55%.
