Update 2a. Vocal responses - acoustic analyses.md

--- a/2a. Vocal responses - acoustic analyses.md
+++ b/2a. Vocal responses - acoustic analyses.md
@@ -80,7 +80,7 @@ Mundry, R., & Sommer, C. (2007). Discriminant function analysis with nonindepend
 # Run PDFA
  pdfa.res.a <- pDFA.incomplete(test.fac = "unit_type", 
                                contr.fac = "id", 
-                               variables = c("avg_entropy_bits", "center_time_rel", "peak_time_relative", delta_time_s,
+                               variables = c("avg_entropy_bits", "center_time_rel", "peak_time_relative", "delta_time_s",
                                              "time_25_rel", "time_5_rel", "time_75_rel", "time_95_rel", "pfc_avg_slope_hzms", "peak_freq_hz"), 
                                balance.contr.fac.contrib = "mode",
                                n.sel = 100, 
