Update 2a. Vocal responses - acoustic analyses.md

--- a/2a. Vocal responses - acoustic analyses.md
+++ b/2a. Vocal responses - acoustic analyses.md
@@ -76,6 +76,16 @@ Mundry, R., & Sommer, C. (2007). Discriminant function analysis with nonindepend
 # Subset with shrills and hoos (no growls because N = 8)
  all_pdfa <- dm %>% 
    subset(quality == 1 & unit_type != "growl")
+
+ # Sample sizes
+ all_pdfa %>% 
+   group_by(unit_type) %>% 
+   summarise(n_call=n())
+
+  unit_type n_unit n_individual
+  <chr>      <int>        <int>
+1 hoo           68           10
+2 shrill       348           16
  
 # Run PDFA
  pdfa.res.a <- pDFA.incomplete(test.fac = "unit_type", 
@@ -113,17 +123,45 @@ no.permutations                                                    1000
 no.random.selections                                                100
 balance.contr.fac.contrib                                          mode
  
- # Sample sizes
- all_pdfa %>% 
-   group_by(unit_type) %>% 
-   summarise(n_call=n())
-
-  unit_type n_unit n_individual
-  <chr>      <int>        <int>
-1 hoo           68           10
-2 shrill       348           16
  ```
 
 </details>
 
+#### Results 
+
 N = 348 ‘shrills’ from N = 16 individuals, N = 68 ‘hoos’, from N = 10 individuals, p = 0.002, correctly cross-classified = 94%, expected = 55%.
+
+##### PCA for visualisation 
+
+<details>
+  <summary>Click to expand code</summary>
+  
+  ```r
+  # Create a dataframe for plotting
+pca.df <- data.frame(pca.res$x, unit_type = all_pdfa$unit_type)
+
+# Plot the first two principal components
+ggplot(pca.df, aes(x = PC1, y = PC2, color = unit_type)) +
+  geom_point(size = 3) +
+  labs(x = "PC1",
+       y = "PC2",
+       color = "Call type") +
+  theme_minimal() +
+  scale_color_manual(values = c("shrill" = "#56B4B0", "hoo" = "#E69F00"))
+
+# Calculate the proportion of variance explained by each principal component
+variance_explained <- (pca.res$sdev^2) / sum(pca.res$sdev^2)
+
+# Create a dataframe to show the variance explained by each PC
+variance_df <- data.frame(PC = paste0("PC", 1:length(variance_explained)),
+                          Variance_Explained = variance_explained)
+
+# Print the proportion of variance explained
+print(variance_df)
+
+ ```
+
+</details>
+
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/pca_shrill_hoo.jpeg" alt="pca_sh" width="400"/>
+
