Update 2a. Vocal responses - acoustic analyses.md

--- a/2a. Vocal responses - acoustic analyses.md
+++ b/2a. Vocal responses - acoustic analyses.md
@@ -163,5 +163,5 @@ print(variance_df)
 
 </details>
 
-<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/pca_shrill_hoo.jpeg" alt="pca_sh" width="400"/>
+<img src="https://github.com/AuriLF/mgb_predator/blob/main/1.%20plots/pca_shrill_hoo_x.jpeg" alt="pca_sh" width="400"/>
 
